--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <!--HTML5 doctype-->
 <html>
+	<!-- content goes here-->
 
 	<head>
+		<link rel="stylesheet" type="text/css" href="media_button_bar/css/media_button_bar.css">
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="app_framework/css/af.ui.min.css">
 		<link rel="stylesheet" type="text/css" href="app_framework/css/icons.min.css">
@@ -29,16 +31,20 @@
 		<script type="application/javascript" src="app_framework/appframework.ui.min.js"></script>
 		<script type="application/javascript" src="js/jquery.min.js"></script>
 		<script type="application/javascript" src="js/index_user_scripts.js"></script>
+		<script type="application/javascript" src="sidebar/js/jquery.event.move.js"></script>
+		<script type="application/javascript" src="sidebar/js/jquery.event.swipe.js"></script>
+		<script type="application/javascript" src="sidebar/js/sidebar.js"></script>
+		<script type="application/javascript" src="sidebar/js/swipe.js"></script>
 	</head>
 
 	<body id="afui">
 
 		<!-- content goes here-->
 		<div class="uwrap" id="content">
-			<div class="upage panel" id="mainpage" data-header="af-header-0" data-footer="none">
+			<div class="upage panel" id="mainpage" data-header="af-header-0" data-footer="af-footer-0">
 				<div class="upage-outer">
 					<header class="container-group inner-element uib_w_1" data-uib="app_framework/header" data-ver="0" id="af-header-0">
-						<h1></h1>
+						<h1>Oi</h1>
 						<div class="widget-container wrapping-col single-centered"></div>
 						<div class="widget-container content-area horiz-area wrapping-col left"></div>
 						<div class="widget-container content-area horiz-area wrapping-col right"></div>
@@ -49,7 +55,15 @@
 							<div class="col uib_col_1 col-0_12-12" data-uib="layout/col" data-ver="0">
 								<div class="widget-container content-area vertical-col">
 
-									<a class="button widget uib_w_2 d-margins" data-uib="app_framework/button" data-ver="0" href="#uib_page_1" data-transition="slide">Button</a><span class="uib_shim"></span>
+									<a class="button widget uib_w_2 d-margins" data-uib="app_framework/button" data-ver="0" href="#uib_page_1" data-transition="slide">Button</a>
+									<div class="table-thing with-label widget uib_w_9 d-margins" data-uib="app_framework/flip_switch" data-ver="0">
+										<label class="narrow-control label-inline">Flip switch</label>
+										<div class="wide-control">
+											<input type="checkbox" class="toggle" id="af-flipswitch-0">
+											<label for="af-flipswitch-0" data-off="No" data-on="Yes"><span></span>
+											</label>
+										</div>
+									</div><span class="uib_shim"></span>
 								</div>
 							</div>
 							<span class="uib_shim"></span>
@@ -57,6 +71,23 @@
 					</div>
 					<!-- /upage-content -->
 
+					<footer class="inner-element uib_w_8" data-uib="app_framework/footer" data-ver="0" id="af-footer-0"><a class="widget uib_w_10 d-margins icon settings" data-uib="app_framework/button" data-ver="0">Button</a>
+					</footer>
+					<div class="inner-element uib_w_15 uib_sidebar leftbar bar-bg thumb-bg bar-gutter" data-uib="layout/left_sidebar" data-ver="0" data-anim="{'style':'overlap', 'v':200, 'side':'left'}">
+						<div class="sidebar-content">
+
+							<div class="grid grid-pad urow uib_row_3 row-height-3" data-uib="layout/row" data-ver="0">
+								<div class="col uib_col_3 col-0_12-12" data-uib="layout/col" data-ver="0">
+									<div class="widget-container content-area vertical-col">
+
+										<a class="button widget uib_w_16 d-margins" data-uib="app_framework/button" data-ver="0" id="btnSair">Sair</a><span class="uib_shim"></span>
+									</div>
+								</div>
+								<span class="uib_shim"></span>
+							</div>
+
+						</div>
+					</div>
 				</div>
 				<!-- /upage-outer -->
 
@@ -92,7 +123,15 @@
 												<label class="content-box" for="af-radio-2">Radio</label>
 											</div>
 										</div>
-									</div><span class="uib_shim"></span>
+									</div>
+									<ul class="list widget uib_w_11 d-margins" data-uib="app_framework/listview" data-ver="0">
+										<li class="widget uib_w_12" data-uib="app_framework/listitem" data-ver="0"><a>List Item</a>
+										</li>
+										<li class="widget uib_w_13" data-uib="app_framework/listitem" data-ver="0"><a>List Item</a>
+										</li>
+										<li class="widget uib_w_14" data-uib="app_framework/listitem" data-ver="0"><a>List Item</a>
+										</li>
+									</ul><span class="uib_shim"></span>
 								</div>
 							</div>
 							<span class="uib_shim"></span>
