--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!--HTML5 doctype-->
 <html>
 	<!-- content goes here-->
+	<!-- content goes here-->
 
 	<head>
 		<link rel="stylesheet" type="text/css" href="media_button_bar/css/media_button_bar.css">
@@ -37,7 +38,7 @@
 		<script type="application/javascript" src="sidebar/js/swipe.js"></script>
 	</head>
 
-	<body id="afui">
+	<body id="afui" class="android light">
 
 		<!-- content goes here-->
 		<div class="uwrap" id="content">
