--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
 
 		<!-- content goes here-->
 		<div class="uwrap" id="content">
-			<div class="upage panel" id="mainpage" data-header="af-header-0" data-footer="af-footer-0">
+			<div class="upage panel" id="mainpage" data-header="af-header-0" data-footer="none">
 				<div class="upage-outer">
 					<header class="container-group inner-element uib_w_1" data-uib="app_framework/header" data-ver="0" id="af-header-0">
 						<h1>Oi</h1>
 						<div class="widget-container wrapping-col single-centered"></div>
 						<div class="widget-container content-area horiz-area wrapping-col left"></div>
-						<div class="widget-container content-area horiz-area wrapping-col right"></div>
+						<div class="widget-container content-area horiz-area wrapping-col right">
+							<a class="button widget uib_w_17 d-margins icon minimize" data-uib="app_framework/button" data-ver="0"></a>
+						</div>
 					</header>
 					<div class="upage-content" id="mainsub">
 
@@ -72,8 +74,6 @@
 					</div>
 					<!-- /upage-content -->
 
-					<footer class="inner-element uib_w_8" data-uib="app_framework/footer" data-ver="0" id="af-footer-0"><a class="widget uib_w_10 d-margins icon settings" data-uib="app_framework/button" data-ver="0">Button</a>
-					</footer>
 					<div class="inner-element uib_w_15 uib_sidebar leftbar bar-bg thumb-bg bar-gutter" data-uib="layout/left_sidebar" data-ver="0" data-anim="{'style':'overlap', 'v':200, 'side':'left'}">
 						<div class="sidebar-content">
 
